[package]
name = "testdll"
version = "0.1.0"
edition = "2021"

[lib]
name = "testdll"
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
strip = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["std", "everything"] }
libc = { version = "0.2.135" }
sharedlib = "3.1.0"
